lib_LTLIBRARIES = libflotsam.la
libflotsam_la_SOURCES = \
	adding.hpp \
	analyse_phase_function.cpp \
	angular_variance_from_phase_func.cpp \
	angular_variance_from_phase_func.hpp \
	asymmetry_factor_from_phase_func.cpp \
	asymmetry_factor_from_phase_func.hpp \
	BackgroundProfile.cpp \
	BackgroundProfile.hpp \
	BandProfile.cpp \
	BandProfile.hpp \
	base.hpp \
	bi_directional_surface_reflectivity.cpp \
	bi_directional_surface_reflectivity.hpp \
	Channel.hpp \
	c_interface.cpp \
	calc_angular_variance.hpp \
	calc_asymmetry_factor.hpp \
	calc_beam_fluxes.hpp \
	calc_reflectance_from_fluxes.hpp \
	calc_scattering_probabilities.hpp \
	calc_smoothed_phase_function.hpp \
	compress_grid.cpp \
	containers.hpp \
	delta_eddington_scaling.hpp \
	diffraction_scaling.hpp \
	LookUpTable.cpp \
	LookUpTable.hpp \
	meador_weaver.hpp \
	merge_phase_function.hpp \
	merge_props.hpp \
	OceanBRDF.hpp \
	OceanBRDF.cpp \
	phase_function_component.cpp \
	phase_function_component.hpp \
	rayleigh.cpp \
	rayleigh.hpp \
	reflectance.cpp \
	reflectance.hpp

#	phase_function_exptan_35deg_reducedsmooth.cpp 
#	phase_function_exptan_35deg_reducedsmooth.hpp 


#libflotsam_la_CPPFLAGS = -I../include


